# next-tools

./: .gitignore  Cargo.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain  turbo.json  vitest.config.ts
.github/workflows/: doc.yaml  publish.yaml
docs/: next.config.js  package.json  theme.config.jsx  tsconfig.json
docs/components/I18nPlayground/: index.tsx
docs/components/LiveCode/: index.tsx
docs/components/MonacoEditor/: index.tsx
docs/pages/: cli.mdx  i18n.mdx  next-plugin.mdx  swc-plugin.mdx  tools.mdx  unplugin.mdx
docs/pages/tools/: _meta.json  create-state-context.mdx  create-storage.mdx  map-props.mdx  request-builder.mdx
docs/pages/tools/examples/: CreateStateContextExample.tsx
docs/scripts/: buildWasm.mjs  exampleInsetLoader.js  exampleInsetLoader.spec.js
docs/shared/: wasm-pkg.ts
example/next-js/: .gitignore  CHANGELOG.md  auto-imports.d.ts  dune.config.js  next.config.js  package.json  tsconfig.json
example/next-js/apis/apis_page-search/: post.ts
example/next-js/apis/coins/: get.ts  post.ts  put.ts
example/next-js/apis/coins:page-search/: post.ts
example/next-js/apis/coins_page-search/: post.ts
example/next-js/i18n/: cs.i18n.json  en.i18n.json  in.i18n.json  zh.i18n.json
example/next-js/lingui-example/: i18n.ts
example/next-js/locale/: cs.i18n.js  en.i18n.js  en.locale.json
example/next-js/pages/: _app.tsx  examples.tsx  index.tsx
example/next-js/utils/: request.ts
example/swc-raw/src/: tFcuntion.js
example/swc-raw/tests/: tFunction.spec.js
scripts/: release.mjs
(+139 files in other folders)
