[workspace]
members = [
    "packages/swc_plugin",
    "packages/swc_visitor",
    "packages/wasm"
]
[profile.release]


[workspace.dependencies]
swc_core = { version = "0.76.18"  }
testing = "0.33.4"
swc_error_reporters="0.15.5"
tracing = { version = "0.1.32" }
serde = { version = "1" }
serde_json = "1"
once_cell = "1"
